restyling site and posting

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -10,10 +10,9 @@
 
     <p class="post-date heading">
       <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%d %b %Y" }}</time>
-      {% include tag-list.html tags=post.categories meta=site.featured_categories start_with="in " separator=" / " %}
-      {% include tag-list.html tags=post.tags meta=site.featured_tags start_with="on " separator=", " %}
+      {% include tag-list.html tags=post.categories meta=site.featured_categories start_with=" on " separator=" / " %}
+      {% include tag-list.html tags=post.tags meta=site.featured_tags start_with=" / " separator=", " %}
     </p>
-
     {% include message.html text=post.description %}
   </header>
   {% for tag_slug in post.tags %}
@@ -26,9 +25,9 @@
   {% unless include.excerpt %}
     <div class="markdown-body">
 
-{% if post.header-img %}<div class="head-image"><img src="{{ site.url }}/{% if post.header-img %}assets/{{ post.header-img }}{% endif %}"/></div>
+{% if post.header-img %}<div class="head-image"><img src="/assets/{{ post.header-img }}"/></div>
 <br/>{% elsif tag.header-img %}
-<div class="head-image"><img src="{{ site.url }}/assets/{{ tag.header-img }}"/></div>
+<div class="head-image"><img src="/assets/{{ tag.header-img }}"/></div>
 <br/>{% endif %}
 <style>
 .myAd1190 { display:block; width:98%; height: 280px; }
@@ -60,7 +59,7 @@
     </script>
   {% else %}
     {{ post.excerpt }}
-    <p class="read-more"><a class="heading" href="{{ post.url | relative_url }}" data-flip="title">Continue reading </a></p>
+    <p class="read-more">Continue Reading ... <a class="heading" href="{{ post.url | relative_url }}" data-flip="title">{{ post.title }}</a></p>
   {% endunless %}
 
 </article>
