--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 {% endfor %}
 
 {% if page.header-img %}
-  <meta property="og:image" content="{{ site.url }}/assets/{{ page.header-img }}">
+  <meta property="og:image" content="{ site.url }}/assets/{{ page.header-img }}">
   <br/>
 {% elsif tag.header-img %}
   <meta property="og:image" content="{{ site.url }}/assets/{{ tag.header-img }}">
@@ -108,22 +108,20 @@
 <link rel="preload" href="/assets/css/hydejack.css" as="style" onload="this.rel='stylesheet'">
 
 {% include page-style.html %}
-
-<noscript>
-  <link rel="stylesheet" href="{{ style_url | absolute_url }}">
-  {% assign font = site.font | default:"'Sans-serif'" %}
-  {% assign font_heading = site.font_heading | default:"'E' %}
-  {% assign google_fonts = site.google_fonts | default:"Roboto+Slab:700|Noto+Serif:400,400i,700,700i" %}
-
-  {% unless site.no_google_fonts %}
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family={{ google_fonts }}">
-    <style>
-      html { font-family: {{ font }} }
-      h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .heading { font-family: {{ font_heading }} }
-    </style>
-  {% endunless %}
-
-  {% capture icons_url %}{% link assets/icomoon/style.css %}{% endcapture %}
-  <link rel="stylesheet" href="{{ icons_url | absolute_url }}">
-</noscript>
+{% assign google_fonts = site.google_fonts | default:"Roboto+Slab:700|Noto+Sans:400,400i,700,700i" %}
+{% capture icons_url %}{% link assets/icomoon/style.css %}{% endcapture %}
+<script>
+  WebFontConfig = {
+    {% unless site.no_google_fonts %}
+    google: {
+      families: '{{ google_fonts }}'.split('|')
+    },
+    {% endunless %}
+    custom: {
+      families: ['Nanum Gothic', 'icomoon'],
+      urls: ['https://fonts.googleapis.com/earlyaccess/nanumgothic.css', '{{ icons_url | relative_url }}']
+    }
+  };
+</script>
+<script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <!--<![endif]-->
