--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,16 +3,16 @@
   <ul>
     <li class="pagination-item older" >
       {% if paginator.next_page %}
-        <a rel="next" href="{{ paginator.next_page_path | relative_url }}">Older</a>
+        <a rel="next" href="{{ paginator.next_page_path | relative_url }}">Next</a>
       {% else %}
-        <span>Older</span>
+        <span>Next</span>
       {% endif %}
     </li>
     <li class="pagination-item newer" >
       {% if paginator.previous_page %}
-        <a rel="prev" href="{{ paginator.previous_page_path | relative_url }}">Newer</a>
+        <a rel="prev" href="{{ paginator.previous_page_path | relative_url }}">Prev</a>
       {% else %}
-        <span>Newer</span>
+        <span>Prev</span>
       {% endif %}
     </li>
   </ul>
