--- a/_sass/pooleparty/_type.scss
+++ b/_sass/pooleparty/_type.scss
@@ -117,9 +117,9 @@ blockquote {
 .read-more {
   @extend .faded;
   margin-top: 2rem;
-  float: right;
+  float: left;
 
-  &::after {
-    content: " \2192"; // →
-  }
+ // &::after {
+//    content: " \2192"; // →
+//  }
 }
